--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="key" data-letters="M-K">R <div class="letters">↑ M | ↓ K</div></div>
         <div class="key" data-letters="G-W">D <div class="letters">↑ G | ↓ W</div></div>
         <div class="key" data-letters="V-Z">L <div class="letters">↑ V | ↓ Z</div></div>
-        <div class="key space" data-letters="">Spatie</div>
+        <div class="key space" data-space="true">␣</div>
     </div>
     <script src="script.js"></script>
 </body>
