--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <input type="text" id="output" placeholder="Typ hier...">
 
     <div class="keyboard">
-        <div class="key" data-letters="U-I">E <div class="letters">↑ U | ↓ I</div></div>
-        <div class="key" data-letters="N-Y">T <div class="letters">↑ N | ↓ Y</div></div>
-        <div class="key" data-letters="O-D">A <div class="letters">↑ O | ↓ D</div></div>
-        <div class="key" data-letters="N-L">O <div class="letters">↑ N | ↓ L</div></div>
-        <div class="key" data-letters="D-G">I <div class="letters">↑ D | ↓ G</div></div>
-        <div class="key" data-letters="H-R">S <div class="letters">↑ H | ↓ R</div></div>
-        <div class="key" data-letters="M-K">R <div class="letters">↑ M | ↓ K</div></div>
-        <div class="key" data-letters="G-W">D <div class="letters">↑ G | ↓ W</div></div>
-        <div class="key" data-letters="V-Z">L <div class="letters">↑ V | ↓ Z</div></div>
-        <div class="key space" data-space="true">␣</div>
+        <div class="key" data-letters="Q-L">I <div class="letters">↑ Q | ↓ L</div></div>
+        <div class="key" data-letters="V-Y">T <div class="letters">↑ V | ↓ Y</div></div>
+        <div class="key" data-letters="X-G">A <div class="letters">↑ X | ↓ G</div></div>
+        <div class="key" data-letters="H-C">D <div class="letters">↑ H | ↓ C</div></div>
+        <div class="key" data-letters="F-M">O <div class="letters">↑ F | ↓ M</div></div>
+        <div class="key" data-letters="K-Z">R <div class="letters">↑ K | ↓ Z</div></div>
+        <div class="key" data-letters="J-P">S <div class="letters">↑ J | ↓ P</div></div>
+        <div class="key" data-letters="B-W">E <div class="letters">↑ B | ↓ W</div></div>
+        <div class="key" data-letters="U-.">N <div class="letters">↑ U | ↓ .</div></div>
+        <div class="key space" data-letters="">Spatie</div>
     </div>
     <script src="script.js"></script>
 </body>
