--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="key letter" data-letters="B-W">E <div class="letters">↑ B | ↓ W</div></div>
         <div class="key letter" data-letters="U-.">N <div class="letters">↑ U | ↓ .</div></div>
         <div class="key space" data-letters="">Spatie</div>
-        <div class="key backspace" data-letters="">Backspace</div>
+        <div class="backspace" data-letters="">Backspace ← </div>
     </div>
     <script src="script.js"></script>
 </body>
