--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <input type="text" id="output" placeholder="Typ hier...">
 
     <div class="keyboard">
-        <div class="key letter" data-letters="Q-L">I <div class="letters">↑ Q | ↓ L</div></div>
-        <div class="key letter" data-letters="V-Y">T <div class="letters">↑ V | ↓ Y</div></div>
-        <div class="key letter" data-letters="X-G">A <div class="letters">↑ X | ↓ G</div></div>
-        <div class="key letter" data-letters="H-C">D <div class="letters">↑ H | ↓ C</div></div>
-        <div class="key letter" data-letters="F-M">O <div class="letters">↑ F | ↓ M</div></div>
-        <div class="key letter" data-letters="K-Z">R <div class="letters">↑ K | ↓ Z</div></div>
-        <div class="key letter" data-letters="J-P">S <div class="letters">↑ J | ↓ P</div></div>
-        <div class="key letter" data-letters="B-W">E <div class="letters">↑ B | ↓ W</div></div>
-        <div class="key letter" data-letters="U-.">N <div class="letters">↑ U | ↓ .</div></div>
+        <div class="key" data-letters="Q-L">I <div class="letters">↑ Q | ↓ L</div></div>
+        <div class="key" data-letters="V-Y">T <div class="letters">↑ V | ↓ Y</div></div>
+        <div class="key" data-letters="X-G">A <div class="letters">↑ X | ↓ G</div></div>
+        <div class="key" data-letters="H-C">D <div class="letters">↑ H | ↓ C</div></div>
+        <div class="key" data-letters="F-M">O <div class="letters">↑ F | ↓ M</div></div>
+        <div class="key" data-letters="K-Z">R <div class="letters">↑ K | ↓ Z</div></div>
+        <div class="key" data-letters="J-P">S <div class="letters">↑ J | ↓ P</div></div>
+        <div class="key" data-letters="B-W">E <div class="letters">↑ B | ↓ W</div></div>
+        <div class="key" data-letters="U-.">N <div class="letters">↑ U | ↓ .</div></div>
         <div class="key space" data-letters="">Spatie</div>
         <div class="backspace" data-letters="">Backspace ← </div>
     </div>
