--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <input type="text" id="output" placeholder="Typ hier...">
 
     <div class="keyboard">
-        <button class="key" data-letters="Q-L">I <div class="letters">↑ Q | ↓ L</div></button>
-        <button class="key" data-letters="V-Y">T <div class="letters">↑ V | ↓ Y</div></button>
-        <button class="key" data-letters="X-G">A <div class="letters">↑ X | ↓ G</div></button>
-        <button class="key" data-letters="H-C">D <div class="letters">↑ H | ↓ C</div></button>
-        <button class="key" data-letters="F-M">O <div class="letters">↑ F | ↓ M</div></button>
-        <button class="key" data-letters="K-Z">R <div class="letters">↑ K | ↓ Z</div></button>
-        <button class="key" data-letters="J-P">S <div class="letters">↑ J | ↓ P</div></button>
-        <button class="key" data-letters="B-W">E <div class="letters">↑ B | ↓ W</div></button>
-        <button class="key" data-letters="U-.">N <div class="letters">↑ U | ↓ .</div></button>
-        <button class="key space" data-letters="">Spatie</button>
+        <button class="key" data-letters="Q-L">I <div class="letters">← Q | L →</div></button>
+        <button class="key" data-letters="V-Y">T <div class="letters">← V | Y →</div></button>
+        <button class="key" data-letters="X-G">A <div class="letters">← X | G →</div></button>
+        <button class="key" data-letters="H-C">D <div class="letters">← H | C →</div></button>
+        <button class="key" data-letters="F-M">O <div class="letters">← F | M →</div></button>
+        <button class="key" data-letters="K-Z">R <div class="letters">← K | Z →</div></button>
+        <button class="key" data-letters="J-P">S <div class="letters">← J | P →</div></button>
+        <button class="key" data-letters="B-W">E <div class="letters">← B | W →</div></button>
+        <button class="key" data-letters="U-.">N <div class="letters">← U | . →</div></button>
+        <button class="space" data-letters="">Spatie</button>
         <button class="backspace" data-letters="">Backspace</button>
     </div>
     <script src="script.js"></script>
