--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" id="output" placeholder="Typ hier...">
+    <textarea id="output" placeholder="Typ hier..."></textarea>
 
     <div class="keyboard">
         <button class="key" data-letters="Q-L">I <div class="letters">↑ Q | L ↓</div></button>
