--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="key" data-letters="U-.">N <div class="letters">↑ U <div></div> . ↓</div></button>
         <button class="function space" data-letters="">Spatie</button>
         <button class="function backspace" data-letters="">Backspace</button>
-        <button class="function toggle-case" data-letters="">⇧</button>
+        <button class="function toggle-case" data-letters="">⇧<div></div></button>
         <button class="function toggle-numbers" data-letters="">123</button>
     </div>
     <script src="script.js"></script>
