--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/main/index.html">main</a>
-    <a href="/layout 1/index.html">layout 1</a>
+    <a href="main/index.html">main</a>
+    <a href="layout 1/index.html">layout 1</a>
     <a href="layout 2/index.html">layout 2</a>
 </body>
 </html>
