--- a/layout1/index.html
+++ b/layout1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="layout1/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -24,6 +24,6 @@
         <button class="function toggle-case" data-letters="">⇧<div></div></button>
         <button class="function toggle-numbers" data-letters="">123</button>
     </div>
-    <script src="script.js"></script>
+    <script src="layout1/script.js"></script>
 </body>
 </html>
