--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="main/index.html">main</a>
-    <a href="layout1/index.html">layout 1</a>
-    <a href="layout2/index.html">layout 2</a>
+    <a href="main/">main</a>
+    <a href="layout1/">layout 1</a>
+    <a href="layout2/">layout 2</a>
 </body>
 </html>
