--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <a href="main/">main</a>
     <a href="layout1/">layout 1</a>
     <a href="layout2/">layout 2</a>
+    <a href="layout3/">layout 3</a>
 </body>
 </html>
