--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="layout1/">layout 1</a>
     <a href="layout2/">layout 2</a>
     <a href="layout3/">layout 3</a>
+    <a href="layout4/">layout 4</a>
 </body>
 </html>
